# Moleculizer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
glad/: glad.c  glad.h
glfw/: CMakeLists.txt
imgui/: imgui_init.cpp  imgui_init.h
include/: appConfig.h  application.h  atom.h  circle.h  cylinder.h  file.h  fileDialog.h  molecule.h  shader.h  sphere.h  utils.h  windowHandler.h  xyzParser.h
shaders/: frag.glsl  sphereFrag.glsl  sphereVert.glsl  vert.glsl
src/: appConfig.cpp  application.cpp  atom.cpp  circle.cpp  cylinder.cpp  file.cpp  fileDialog.cpp  molecule.cpp  shader.cpp  sphere.cpp  utils.cpp  windowHandler.cpp  xyzParser.cpp
test/: main.cpp
xyz/: Benzene.xyz  Ethanol.xyz  NaCl.xyz  diamond.xyz  h2so4.xyz  methane.xyz  pentane.xyz  polyethylene.xyz  water.xyz
